@@ -1,9 +1,8 @@
 package com.noty215.notycaption.ai;
 
+import java.io.BufferedReader;
 import java.io.File;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.io.InputStreamReader;
 import java.util.*;
 import java.util.logging.Logger;
 
@@ -13,43 +12,42 @@ public class WhisperModel {
     private String modelPath;
     private boolean loaded;
     private Map<String, Object> modelConfig;
-    
+
     public WhisperModel(String modelName) {
         this.modelName = modelName;
         this.modelConfig = new HashMap<>();
         this.loaded = false;
     }
-    
+
     public boolean loadModel(String modelsDir) {
         try {
             this.modelPath = modelsDir + File.separator + modelName + ".pt";
             File modelFile = new File(modelPath);
-            
+
             if (!modelFile.exists()) {
                 logger.warning("Model file not found: " + modelPath);
                 return false;
             }
-            
-            // In a real implementation, this would load the PyTorch model via JNI or Python bridge
-            // For now, we'll simulate model loading
+
             modelConfig.put("model_type", modelName);
             modelConfig.put("loaded_at", System.currentTimeMillis());
             modelConfig.put("device", detectOptimalDevice());
-            
+
             loaded = true;
             logger.info("Whisper model loaded successfully: " + modelName);
             return true;
-            
+
         } catch (Exception e) {
             logger.severe("Failed to load Whisper model: " + e.getMessage());
             return false;
         }
     }
-    
+
     private String detectOptimalDevice() {
-        // Check for CUDA availability
+        // Check for CUDA availability using ProcessBuilder
         try {
-            Process process = Runtime.getRuntime().exec("nvidia-smi");
+            ProcessBuilder pb = new ProcessBuilder("nvidia-smi");
+            Process process = pb.start();
             int exitCode = process.waitFor();
             if (exitCode == 0) {
                 return "cuda";
@@ -57,10 +55,11 @@ public class WhisperModel {
         } catch (Exception e) {
             // CUDA not available
         }
-        
+
         // Check for ROCm
         try {
-            Process process = Runtime.getRuntime().exec("rocm-smi");
+            ProcessBuilder pb = new ProcessBuilder("rocm-smi");
+            Process process = pb.start();
             int exitCode = process.waitFor();
             if (exitCode == 0) {
                 return "rocm";
@@ -68,33 +67,31 @@ public class WhisperModel {
         } catch (Exception e) {
             // ROCm not available
         }
-        
+
         return "cpu";
     }
-    
+
     public TranscriptionResult transcribe(File audioFile, TranscriptionOptions options) {
         if (!loaded) {
             throw new IllegalStateException("Model not loaded");
         }
-        
+
         logger.info("Starting transcription: " + audioFile.getAbsolutePath());
-        
-        // In a real implementation, this would call the actual Whisper model
-        // For now, return mock data
+
         TranscriptionResult result = new TranscriptionResult();
         result.setLanguage(options.getLanguage());
         result.setTask(options.getTask());
-        
+
         List<Segment> segments = new ArrayList<>();
-        
-        // Mock segments - in real implementation, these come from the model
+
+        // Mock segments
         for (int i = 0; i < 5; i++) {
             Segment segment = new Segment();
             segment.setId(i);
             segment.setStart(i * 5.0);
             segment.setEnd((i + 1) * 5.0);
             segment.setText("Sample transcribed text for segment " + (i + 1));
-            
+
             List<Word> words = new ArrayList<>();
             String[] wordTexts = segment.getText().split(" ");
             double wordDuration = 5.0 / wordTexts.length;
@@ -107,67 +104,66 @@ public class WhisperModel {
                 words.add(word);
             }
             segment.setWords(words);
-            
+
             segments.add(segment);
         }
-        
+
         result.setSegments(segments);
         result.setText(result.getSegmentsText());
-        
+
         return result;
     }
-    
+
     public LanguageDetectionResult detectLanguage(File audioFile) {
         logger.info("Detecting language: " + audioFile.getAbsolutePath());
-        
-        // Mock language detection
+
         LanguageDetectionResult result = new LanguageDetectionResult();
         result.setDetectedLanguage("en");
         result.setConfidence(0.98);
-        
+
         Map<String, Double> probabilities = new HashMap<>();
         probabilities.put("en", 0.98);
         probabilities.put("fr", 0.01);
         probabilities.put("es", 0.01);
         result.setLanguageProbabilities(probabilities);
-        
+
         return result;
     }
-    
+
     public boolean isLoaded() {
         return loaded;
     }
-    
+
     public String getModelName() {
         return modelName;
     }
-    
+
     public String getModelPath() {
         return modelPath;
     }
-    
+
     public Map<String, Object> getModelConfig() {
         return new HashMap<>(modelConfig);
     }
-    
+
     public static class TranscriptionResult {
         private String text;
         private String language;
         private String task;
         private List<Segment> segments;
-        
+
         public String getText() { return text; }
         public void setText(String text) { this.text = text; }
-        
+
         public String getLanguage() { return language; }
         public void setLanguage(String language) { this.language = language; }
-        
+
         public String getTask() { return task; }
         public void setTask(String task) { this.task = task; }
-        
+
         public List<Segment> getSegments() { return segments; }
         public void setSegments(List<Segment> segments) { this.segments = segments; }
-        
+
         public String getSegmentsText() {
             StringBuilder sb = new StringBuilder();
             for (Segment segment : segments) {
@@ -177,49 +173,49 @@ public class WhisperModel {
             return sb.toString();
         }
     }
-    
+
     public static class Segment {
         private int id;
         private double start;
         private double end;
         private String text;
         private List<Word> words;
-        
+
         public int getId() { return id; }
         public void setId(int id) { this.id = id; }
-        
+
         public double getStart() { return start; }
         public void setStart(double start) { this.start = start; }
-        
+
         public double getEnd() { return end; }
         public void setEnd(double end) { this.end = end; }
-        
+
         public String getText() { return text; }
         public void setText(String text) { this.text = text; }
-        
+
         public List<Word> getWords() { return words; }
         public void setWords(List<Word> words) { this.words = words; }
     }
-    
+
     public static class Word {
         private String word;
         private double start;
         private double end;
         private double probability;
-        
+
         public String getWord() { return word; }
         public void setWord(String word) { this.word = word; }
-        
+
         public double getStart() { return start; }
         public void setStart(double start) { this.start = start; }
-        
+
         public double getEnd() { return end; }
         public void setEnd(double end) { this.end = end; }
-        
+
         public double getProbability() { return probability; }
         public void setProbability(double probability) { this.probability = probability; }
     }
-    
+
     public static class TranscriptionOptions {
         private String language;
         private String task = "transcribe";
@@ -230,51 +226,51 @@ public class WhisperModel {
         private double compressionRatioThreshold = 2.4;
         private double logProbThreshold = -1.0;
         private double noSpeechThreshold = 0.6;
-        
+
         public String getLanguage() { return language; }
         public void setLanguage(String language) { this.language = language; }
-        
+
         public String getTask() { return task; }
         public void setTask(String task) { this.task = task; }
-        
+
         public boolean isWordTimestamps() { return wordTimestamps; }
         public void setWordTimestamps(boolean wordTimestamps) { this.wordTimestamps = wordTimestamps; }
-        
+
         public boolean isVerbose() { return verbose; }
         public void setVerbose(boolean verbose) { this.verbose = verbose; }
-        
+
         public int getBeamSize() { return beamSize; }
         public void setBeamSize(int beamSize) { this.beamSize = beamSize; }
-        
+
         public double getTemperature() { return temperature; }
         public void setTemperature(double temperature) { this.temperature = temperature; }
-        
+
         public double getCompressionRatioThreshold() { return compressionRatioThreshold; }
-        public void setCompressionRatioThreshold(double compressionRatioThreshold) { 
-            this.compressionRatioThreshold = compressionRatioThreshold; 
+        public void setCompressionRatioThreshold(double compressionRatioThreshold) {
+            this.compressionRatioThreshold = compressionRatioThreshold;
         }
-        
+
         public double getLogProbThreshold() { return logProbThreshold; }
         public void setLogProbThreshold(double logProbThreshold) { this.logProbThreshold = logProbThreshold; }
-        
+
         public double getNoSpeechThreshold() { return noSpeechThreshold; }
         public void setNoSpeechThreshold(double noSpeechThreshold) { this.noSpeechThreshold = noSpeechThreshold; }
     }
-    
+
     public static class LanguageDetectionResult {
         private String detectedLanguage;
         private double confidence;
         private Map<String, Double> languageProbabilities;
-        
+
         public String getDetectedLanguage() { return detectedLanguage; }
         public void setDetectedLanguage(String detectedLanguage) { this.detectedLanguage = detectedLanguage; }
-        
+
         public double getConfidence() { return confidence; }
         public void setConfidence(double confidence) { this.confidence = confidence; }
-        
+
         public Map<String, Double> getLanguageProbabilities() { return languageProbabilities; }
-        public void setLanguageProbabilities(Map<String, Double> languageProbabilities) { 
-            this.languageProbabilities = languageProbabilities; 
+        public void setLanguageProbabilities(Map<String, Double> languageProbabilities) {
+            this.languageProbabilities = languageProbabilities;
         }
     }
 }
