@@ -17,33 +17,33 @@ public class NetworkMonitor {
     private long lastBytesReceived;
     private double downloadSpeed;
     private double uploadSpeed;
-    
+
     private NetworkMonitor() {
         lastBytesSent = 0;
         lastBytesReceived = 0;
         downloadSpeed = 0;
         uploadSpeed = 0;
     }
-    
+
     public static synchronized NetworkMonitor getInstance() {
         if (instance == null) {
             instance = new NetworkMonitor();
         }
         return instance;
     }
-    
+
     public void startMonitoring(int intervalMs) {
         if (monitoring) return;
-        
+
         monitoring = true;
         stopMonitoring = false;
         monitorThread = new Thread(() -> monitorLoop(intervalMs));
         monitorThread.setDaemon(true);
         monitorThread.start();
-        
+
         logger.info("Network monitoring started");
     }
-    
+
     public void stopMonitoring() {
         monitoring = false;
         stopMonitoring = true;
@@ -56,25 +56,25 @@ public class NetworkMonitor {
         }
         logger.info("Network monitoring stopped");
     }
-    
+
     private void monitorLoop(int intervalMs) {
         try {
             updateNetworkStats();
             lastBytesSent = getTotalBytesSent();
             lastBytesReceived = getTotalBytesReceived();
-            
+
             while (!stopMonitoring) {
                 Thread.sleep(intervalMs);
-                
+
                 long currentSent = getTotalBytesSent();
                 long currentReceived = getTotalBytesReceived();
-                
+
                 long sentDiff = currentSent - lastBytesSent;
                 long receivedDiff = currentReceived - lastBytesReceived;
-                
+
                 downloadSpeed = (receivedDiff * 1000.0) / intervalMs;
                 uploadSpeed = (sentDiff * 1000.0) / intervalMs;
-                
+
                 lastBytesSent = currentSent;
                 lastBytesReceived = currentReceived;
             }
@@ -82,7 +82,7 @@ public class NetworkMonitor {
             logger.warning("Network monitoring error: " + e.getMessage());
         }
     }
-    
+
     private long getTotalBytesSent() {
         if (System.getProperty("os.name").toLowerCase().contains("win")) {
             return getWindowsNetworkStats(true);
@@ -90,7 +90,7 @@ public class NetworkMonitor {
             return getLinuxNetworkStats(true);
         }
     }
-    
+
     private long getTotalBytesReceived() {
         if (System.getProperty("os.name").toLowerCase().contains("win")) {
             return getWindowsNetworkStats(false);
@@ -98,13 +98,14 @@ public class NetworkMonitor {
             return getLinuxNetworkStats(false);
         }
     }
-    
+
     private long getWindowsNetworkStats(boolean sent) {
         try {
-            Process process = Runtime.getRuntime().exec("netstat -e");
+            ProcessBuilder pb = new ProcessBuilder("netstat", "-e");
+            Process process = pb.start();
             BufferedReader reader = new BufferedReader(
-                new InputStreamReader(process.getInputStream()));
-            
+                    new InputStreamReader(process.getInputStream()));
+
             String line;
             while ((line = reader.readLine()) != null) {
                 if (line.contains("Bytes")) {
@@ -122,13 +123,14 @@ public class NetworkMonitor {
         }
         return 0;
     }
-    
+
     private long getLinuxNetworkStats(boolean sent) {
         try {
-            Process process = Runtime.getRuntime().exec("cat /proc/net/dev");
+            ProcessBuilder pb = new ProcessBuilder("cat", "/proc/net/dev");
+            Process process = pb.start();
             BufferedReader reader = new BufferedReader(
-                new InputStreamReader(process.getInputStream()));
-            
+                    new InputStreamReader(process.getInputStream()));
+
             String line;
             long total = 0;
             while ((line = reader.readLine()) != null) {
@@ -146,40 +148,40 @@ public class NetworkMonitor {
             return 0;
         }
     }
-    
+
     private void updateNetworkStats() {
         try {
             NetworkInterface.getNetworkInterfaces().asIterator()
-                .forEachRemaining(netIf -> {
-                    try {
-                        if (netIf.isUp() && !netIf.isLoopback()) {
-                            logger.fine("Interface: " + netIf.getName());
+                    .forEachRemaining(netIf -> {
+                        try {
+                            if (netIf.isUp() && !netIf.isLoopback()) {
+                                logger.fine("Interface: " + netIf.getName());
+                            }
+                        } catch (Exception e) {
+                            logger.fine("Error getting interface info: " + e.getMessage());
                         }
-                    } catch (Exception e) {
-                        logger.fine("Error getting interface info: " + e.getMessage());
-                    }
-                });
+                    });
         } catch (Exception e) {
             logger.warning("Error updating network stats: " + e.getMessage());
         }
     }
-    
+
     public double getDownloadSpeed() {
         return downloadSpeed;
     }
-    
+
     public double getUploadSpeed() {
         return uploadSpeed;
     }
-    
+
     public String getDownloadSpeedString() {
         return formatSpeed(downloadSpeed);
     }
-    
+
     public String getUploadSpeedString() {
         return formatSpeed(uploadSpeed);
     }
-    
+
     private String formatSpeed(double bytesPerSecond) {
         if (bytesPerSecond > 1024 * 1024) {
             return String.format("%.2f MB/s", bytesPerSecond / (1024 * 1024));
@@ -189,7 +191,7 @@ public class NetworkMonitor {
             return String.format("%.0f B/s", bytesPerSecond);
         }
     }
-    
+
     public static boolean isInternetAvailable() {
         try {
             InetAddress address = InetAddress.getByName("8.8.8.8");
@@ -198,12 +200,13 @@ public class NetworkMonitor {
             return false;
         }
     }
-    
+
     public static String getPublicIP() {
         try {
-            URL url = new URL("https://api.ipify.org");
+            URI uri = new URI("https://api.ipify.org");
+            URL url = uri.toURL();
             BufferedReader reader = new BufferedReader(
-                new InputStreamReader(url.openStream()));
+                    new InputStreamReader(url.openStream()));
             String ip = reader.readLine();
             reader.close();
             return ip;
@@ -211,20 +214,20 @@ public class NetworkMonitor {
             return "Unknown";
         }
     }
-    
+
     public static List<NetworkInterface> getActiveInterfaces() {
         List<NetworkInterface> active = new ArrayList<>();
         try {
             NetworkInterface.getNetworkInterfaces().asIterator()
-                .forEachRemaining(netIf -> {
-                    try {
-                        if (netIf.isUp() && !netIf.isLoopback()) {
-                            active.add(netIf);
+                    .forEachRemaining(netIf -> {
+                        try {
+                            if (netIf.isUp() && !netIf.isLoopback()) {
+                                active.add(netIf);
+                            }
+                        } catch (Exception e) {
+                            logger.fine("Error checking interface: " + e.getMessage());
                         }
-                    } catch (Exception e) {
-                        logger.fine("Error checking interface: " + e.getMessage());
-                    }
-                });
+                    });
         } catch (Exception e) {
             logger.warning("Error getting active interfaces: " + e.getMessage());
         }
